RF-11461: applying fix for RF-10873 specifically on Mobile Showcase CSS

--- a/src/main/webapp/resources/css/mobile/global.css
+++ b/src/main/webapp/resources/css/mobile/global.css
@@ -548,7 +548,11 @@ tr.rf-tb-cntr td a{
 .rf-tb-itm {
     padding: 5px 8px;
 }
-
+/*RF-10873:modal panel backgroun covering whole page*/
+.rf-pp-shade {
+    width: 10000px;
+    height: 10000px;
+}
 /*************************************************
 rich:toolbar
 *************************************************/
